projects/Media/docroot/assets/css/expressco/deliverypasspopup.css
.ec-popup.deliverypasspopup{
  position: relative;
  display: inline-block;
  text-align: left;
  max-width: 622px;
  background: #FFFFFF;
  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
  -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
  -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
}
.deliverypass-content{
  margin: 50px auto 0;
  text-align: left;
  max-width: 622px;
  background: #FFFFFF;
  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
  -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
  -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.35);
}

.deliverypasspopup__header{
  /*background-image: url(/media_stat/images/expressco/deliverypass_popup_header.png);
  background-repeat:no-repeat;
  background-position:top center;
  width:100%;
  height:97px;
  border-bottom:1px solid #e1e0de;
  padding-bottom:30px;*/
}

.deliverypasspopup__header{
	padding: 40px 80px 20px;
}
.deliverypasspopup__header-fd{
	margin: 0 0 0 23px;
}
.deliverypasspopup__header-fd img{
	width: 127px;
}
.deliverypasspopup__header-dp{
	font-size: 48px;
	margin: 0 0 0 23px;
}
.deliverypasspopup__header-dp sup{
	font-size: 18px;
}
.deliverypasspopup__header-truck img{
	padding: 0px 0 0 20px;
	height: 46px;
}
.deliverypasspopup__header-text{
	font-size: 18px;
	text-align: center;
	padding: 7px 0 0;
}
.deliverypasspopup__header-text .deliverypasspopup__header-text-circle{
	color: #4fa157;
	font-size: 15px;
	vertical-align: top;
}
.deliverypasspopup-mobweb{
	display: none;
}
.deliverypasspopup_boxes{
	padding: 0 0 20px 30px;
}
.deliverypasspopup_boxes-header{
	font-size: 16px;
}
.deliverypasspopup_boxes-header-name{
	font-size: 20px;
	font-weight: bold;
}
.deliverypasspopup__option{
	float: left;
    border: solid 2px #4fa157;
    border-top: solid 4px #4fa157;
    padding: 16px 24px;
    width: 280px;
    box-sizing: border-box;
}
.deliverypasspopup__option:nth-child(2n){
	border-left: 0;
}
.deliverypasspopup__option-term{
	font-size: 18px;
}
.deliverypasspopup__option-cost{
	font-size: 14px;
    float: left;
    width: 125px;
}
.deliverypasspopup__option-cost-large{
	font-size: 36px;
}
.deliverypasspopup__option-permonth{
	font-size: 16px;
	float: left;
    width: 125px;
}
.deliverypasspopup__option button{
	margin: 10px 0 0 13px;
	padding: 10px 13px;
	font-size: 14px;
	font-family: Verdana;
}

.deliverypasspopup__option-best{
	position: absolute;
    margin-left: 197px;
    margin-top: -39px;
}
.deliverypasspopup_success{
	max-width: 480px;
	padding: 30px;
	text-align: center;
}
.deliverypasspopup_success-cart{
	width: 58px;
	margin: auto;
	padding: 24px;
}
.deliverypasspopup_success-header{
	font-size: 36px;
	font-weight: bold;
}
.deliverypasspopup_success-text{
	font-size: 18px;
	padding: 16px 0 0;
}
.deliverypasspopup_success-button{
	padding: 40px 0 10px;
}
.deliverypasspopup_success-button button{
	width: 260px;
	height: 48px;
}
.deliverypass-payment .drawer__item-addaction .cssbutton{
	font-size: 14px;
	font-family: Verdana, sans-serif;
}


body.ie .deliverypasspopup__option {
  min-height:120px;
}

.deliverypasspopup__option span.saving {
  font-weight: bold;
  color: red;
}

.deliverypasspopup__option .save{
  color:#fe0100;
  font-weight:bold;
}

.deliverypasspopup__option-title,
.deliverypasspopup__option-desc{
  margin:0;
}

.deliverypasspopup__option-title{
  font-size:15px;
  font-weight:bold;
}

.deliverypasspopup__option-desc{
  font-size:11px;
}

.deliverypasspopup__label > .fake-radio-wrapper,
.deliverypasspopup__radio,
.ec-popup [fdform] .deliverypasspopup__radio{
  margin-left:-25px;
  float:left;
}

.deliverypasspopup__label > .fake-radio-wrapper > .fake-radio:before {
  margin-right: 5px;
}
.mm-page .deliverypasspopup__header{
	padding: 20px 20px;
}
.mm-page .deliverypasspopup__header-fd{
	margin: 0;
}
.mm-page .deliverypasspopup__header-dp{
	font-size: 36px;
	margin: 0;
}
.mm-page .deliverypasspopup__header-dp sup{
	font-size: 14px;
}
.mm-page .deliverypasspopup__header-truck img{
	height: 40px;
    padding: 0 0 3px 20px;
}
.mm-page .deliverypasspopup-mobweb{
	display: inline;
}
.mm-page .deliverypasspopup__header-text{
	font-size: 17px;
	padding: 14px 0 0;
}
.mm-page .deliverypasspopup_boxes{
	padding: 0 0 20px 20px
}
.mm-page .deliverypasspopup_boxes-header{
	font-size: 14px;
}
.mm-page .deliverypasspopup_boxes-header-name{
	font-size: 18px;
}
.mm-page .deliverypasspopup__option{
	width: 168px;
}
.mm-page .deliverypasspopup__footer{
	padding: 30px 20px 40px;
}
.mm-page-overlay .deliverypass-payment .drawer-content > ul li{
	min-height: 105px;
}
.mm-page-overlay .deliverypass-payment .total #subtotalbox2{
	padding: 0px 0 125px;
}
.mm-page-overlay .deliverypass-payment #cartcontent.checkout .cart-button{
	position: fixed;
    bottom: 25px;
	left: 0;
	background: #FFFFFF;
	width: 100%;
	padding: 20px 0;
	border-top: 1px solid #dcdcdc;
}
.mm-page-overlay .deliverypass-payment .deliverypass-payment-cancel{
	position: fixed;
	bottom: 0;
	left: 0;
	background: #FFFFFF;
	width: 100%;
	padding: 0 0 12px;
}
/* FOOOOOOOOOOOOOOTER*/ 


.deliverypasspopup__footer{
  font-size: 14px;
  text-align: center;
  padding: 30px 38px 40px;
}

.deliverypasspopup__footer-terms{
	margin: 8px;
}

/* FOOOOOOOOOOOOOOTER*/ 

.deliverypasspopup__back{
  height:40px;
  font-size:14px;
  float:left;
}

.deliverypasspopup__total{
  font-weight:normal;
}

.deliverypasspopup__termspage{
  display:none;
}

.deliverypasspopup_product {
  display: none;
}

